--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     args: ['install']
 
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
+    args: ['run', 'start']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
