--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,10 @@
+#comment
 steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install']
 
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
+    args: ['run', 'deploy']
 
 options:
   logging: CLOUD_LOGGING_ONLY
-#comment
