--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,10 @@
 steps:
-  - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        # Install Google Cloud SDK
-        apt-get update
-        apt-get install -y google-cloud-sdk
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['auth', 'configure']  # Interactive configuration
-    
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['config', 'set', 'project', 'regal-unfolding-396612']
-
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install']
 
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'deploy']
+    args: ['start']
+
 
 options:
   logging: CLOUD_LOGGING_ONLY
